deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    argocd-image-updater.argoproj.io/image-list: flask-app=quay.io/noelxp/kflask
    argocd-image-updater.argoproj.io/flask-app.update-strategy: latest
  name: flask-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask-app
  strategy:
    rollingUpdate:
      maxSurge: 1       # How many extra pods can be created during update
      maxUnavailable: 0 # No pods unavailable during update
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app
        image: quay.io/noelxp/kflask:adam 
        ports:
        - containerPort: 5000
        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 20
      imagePullSecrets:
        - name: quay-registry-Secret  # Secret for pulling private images
